Bug 152900 - "Create new field as primary key" is disabled when pasting data as new table
Summary: "Create new field as primary key" is disabled when pasting data as new table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0 target:7.5.0.2 target:7.4.6
Keywords: bisected, regression
: 147174 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-06 09:48 UTC by Mike Kaganski
Modified: 2023-04-14 13:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-01-06 09:48:01 UTC
1. Create a spreadsheet
2. Put there some data in column A, like

data
1
2
3

3. Select the column A, copy to clipboard
4. Create a new embedded database (no matter which engine, say, HSQLDB)
5. In Tables view, right-click in "Tables" area, and select "Paste"

The "Copy table" dialog has "Create new field as primary key" checkbox disabled.

This is a regression after commit 3f8e50f9b2fb35db190ce0204981f3f02d1d5ae6, worked fine in 7.1.
Comment 1 Julien Nabet 2023-01-06 16:14:05 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I gave a try with https://gerrit.libreoffice.org/c/core/+/145151
Comment 2 Commit Notification 2023-01-06 17:02:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5effc24969e5f326ef094419631d14d4d3030ed6

tdf#152900: "Create new field as primary key" disabled...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Julien Nabet 2023-01-06 17:07:01 UTC
Caolán already cherry-picked the patch for:
7.5 branch: https://gerrit.libreoffice.org/c/core/+/145119
7.4 branch: https://gerrit.libreoffice.org/c/core/+/145120
so let's put this one to FIXED then.
Comment 4 Commit Notification 2023-01-07 16:03:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/4288b9a2cc5f70cebf6124db0b47277a4581e305

tdf#152900: "Create new field as primary key" disabled...

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-07 16:03:51 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f2d3658697f22090ee138cebda4d10c3ede21230

tdf#152900: "Create new field as primary key" disabled...

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-24 10:36:25 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard
Comment 7 Sanchu Manthiram Shanmugam 2023-04-14 13:54:17 UTC
*** Bug 147174 has been marked as a duplicate of this bug. ***