tdf#152900: "Create new field as primary key" disabled...

when pasting data as new table

Regression from 3f8e50f9b2fb35db190ce0204981f3f02d1d5ae6 (05/2021)
"merge handlers into single toggle handler"

Change-Id: I05376f288c1687978225bd98da21a5e21810292a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145120
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>